# WireConnectAgent

./: CMakeLists.txt  README.md  control_demo.py  depthviz.py  requirements.txt
apps/: CMakeLists.txt
apps/robot_control/: CMakeLists.txt
apps/robot_control/00-calibration/: CMakeLists.txt  README.md  calibration.cpp  redis_keys.h  simviz.cpp
apps/robot_control/00-calibration/urdf/: iiwa14.urdf  world.urdf  world_iiwa.urdf
apps/robot_control/01-control/: CMakeLists.txt  controller.cpp  controller_settings.yaml  controller_with_inference.cpp  redis_keys.h  simviz.cpp  visualization.cpp
apps/robot_control/01-control/urdf/: blank_world.urdf  panda_arm.urdf  panda_arm_hand.urdf  panda_arm_proxy.urdf  proxy_world.urdf  world.urdf
apps/wirebot/: CMakeLists.txt  main.cpp  redis_keys.h
apps/zeromq/: CMakeLists.txt  joint_torque_server.cpp  motion_force_server.cpp  parallel_config.yaml  particle_filter_server.cpp  pfilter_settings.yaml
calibration/: bias_measurement.xml
cmake/: FindSAI.cmake  FindSAI2.cmake
models/: README.md
models/objects/female-connector-truncated/female-connector-truncated/: female-connector-truncated.xml  material.mtl
models/objects/male-connector-minimal/: male-connector-minimal.mtl
models/objects/male-connector-minimal/male-connector-minimal/: male-connector-minimal.xml  material.mtl
models/objects/robotiq-2f85/: base.stl  base_coupling.stl  c-a01-85-open.stl  coupler.stl  driver.stl  follower.stl  pad.stl
models/robots/rizon4s/: rizon4s.urdf
models/robots/robotiq-2f85/: spring_link.stl  tongue.stl
models/scenes/: fr3.urdf  fr3peghole.xml  fr3peghole_modified.xml  fr3peghole_v2.xml  fr3wireconnect.xml  panda_arm.urdf  rizon4s.urdf  rizon4s.xml  rizon4sgripper.urdf  rizon4sgripper.xml  rizon4sgripperlite.xml  rizon4smalecon.xml  rizon4smaleconjl.xml  rizon4spayload.urdf  scene.xml
models/scenes/archive/: scene_with_sdf.xml
python_app/: config.yaml  contact_rich_env.py  env.py  experiment.yaml  fspf_response_test.py  headless_test_environment.py  jax_utils.py  launch_redis.py  parallel_env.py  parallel_mjx.py  parallel_tests.py  policy_network.py  real_robot_deployment.py  rediskeys.py  requirements.txt  reset.py  robot_viewer.py  scalable_contact_rich_env.py  sim_tests.py  sim_tests_config.py  sim_tests_config.yaml  single_env.py  single_env_training.py  torch_single_env_training.py  torch_training_env.py  train.py  train_jax.py  training_notebook.ipynb  utils.py  visual_tests.py  visual_tests_launch.yaml
python_app/depricated/: single_env_training.py
python_app/runs/run_peginhole_3/: experiment_peginhole_3.yaml  model0.cleanrl_model  model100.cleanrl_model  model200.cleanrl_model  tool_start_info.txt
python_app/runs/run_peginhole_4/: experiment_peginhole_4.yaml  model0.cleanrl_model  model100.cleanrl_model  model200.cleanrl_model
python_app/runs/run_peginhole_nocoll/: experiment_peginhole_nocoll.yaml  model0.cleanrl_model  model100.cleanrl_model  tool_start_info.txt
python_app/runs/run_peginhole_noforce/: experiment_peginhole_noforce.yaml  model0.cleanrl_model  model100.cleanrl_model
python_app/runs/run_peginhole_noforce2/: experiment_peginhole_noforce2.yaml  model0.cleanrl_model  model100.cleanrl_model
python_app/runs/run_peginhole_yesforce/: experiment_peginhole_yesforce.yaml  model0.cleanrl_model  model10.cleanrl_model  model20.cleanrl_model  model30.cleanrl_model  model40.cleanrl_model  model50.cleanrl_model
python_app/runs/run_peginhole_yesforce2/: experiment_peginhole_yesforce2.yaml  model0.cleanrl_model  model10.cleanrl_model  model100.cleanrl_model  model110.cleanrl_model  model120.cleanrl_model  model130.cleanrl_model  model140.cleanrl_model  model150.cleanrl_model  model160.cleanrl_model  model170.cleanrl_model  model180.cleanrl_model  model190.cleanrl_model  model20.cleanrl_model  model200.cleanrl_model  model30.cleanrl_model  model40.cleanrl_model  model50.cleanrl_model  model60.cleanrl_model  model70.cleanrl_model  model80.cleanrl_model  model90.cleanrl_model  tool_start_info.txt
src/: FirstOrderLowPassFilter.h  ForceSpaceParticleFilter.cpp  ForceSpaceParticleFilter.h  RotationLowPassFilter.h
src/apps/: CMakeLists.txt
src/apps/wirebot/: main.cpp  redis_keys.h
src/apps/zeromq/: joint_torque_server.cpp
test/: joint_test.py  pfilter_test.py
